# TursoSharp

./: .gitignore  .gitmodules  README.md
.github/workflows/: release.yml  test.yml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs  transaction.rs
runtime/: TursoSharp.targets  TursoSharpWasm.targets
sample/: Directory.Packages.props  TursoSharpExample.sln
sample/TursoSharpExample/: App.axaml  App.axaml.cs  TursoSharpExample.csproj  ViewLocator.cs
sample/TursoSharpExample.Android/: MainActivity.cs  TursoSharpExample.Android.csproj
sample/TursoSharpExample.Browser/: Program.cs  TursoSharpExample.Browser.csproj
sample/TursoSharpExample.Desktop/: Program.cs  TursoSharpExample.Desktop.csproj  app.manifest
sample/TursoSharpExample.iOS/: AppDelegate.cs  Info.plist  Main.cs  TursoSharpExample.iOS.csproj
scripts/: build-android.sh  build-linux.sh  build-macos.sh  build-wasm.sh  build-windows.ps1  build-xcframework.sh
src/: TursoSharp.slnx
src/TursoSharp/: TursoConnection.cs  TursoDatabase.cs  TursoException.cs  TursoResultSet.cs  TursoRow.cs  TursoSharp.csproj  TursoSharp.snk  TursoStatement.cs  TursoTransactionBehavior.cs
src/TursoSharp.Generators/: Globals.cs  TursoEntityGenerator.cs  TursoQueryResultGenerator.cs  TursoSharp.Generators.csproj
src/TursoSharp.Tests/: TursoConnectionTests.cs  TursoDatabaseTests.cs  TursoErrorHandlingTests.cs  TursoJoinGeneratorTests.cs  TursoJsonFunctionTests.cs  TursoQueryGeneratorTests.cs  TursoQueryResultGeneratorTests.cs  TursoSharp.Tests.csproj  TursoStatementValueBindingTests.cs  TursoTransactionTests.cs
(+25 files in other folders)
